syntax="proto3";

option go_package="./GrpcUserService";

message LoginUserRequest {
    string Phone=1;
    string Password=2;
}

message LoginUserResponse {
    int32 ErrorCode=1;
    int32 UserId=2;
}

message RegisterUserRequest {
    string Fullname=1;
    string Phone=2;
    string Password=3;
    string Gender=4;
    int64 DateCreated=5;
    int64 DateUpdated=6;
}

message RegisterUserResponse {
    int32 ErrorCode=1;
    int32 UserId=2;
}

service UserService {
    rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
}



